<resources>
    <string name="app_name">leo3</string>

    <string name="login_app_name">記帳APP</string>
    <string name="login_save_account">紀錄帳號</string>
    <string name="login_login">登入</string>


    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="register">註冊</string>
    <string name="back">返回</string>


    <string name="add_bill_expense">支出</string>
    <string name="add_bill_income">收入</string>
    <string name="add_bill_date">請選擇日期</string>
    <string name="add_bill_type">請選擇分類</string>
    <string name="add_bill_amount">請輸入金額</string>
    <string name="add_bill_note">備註</string>
    <string name="add_bill_add">新增</string>

    <string name="nav_home">首頁</string>
    <string name="nav_record">帳目</string>
    <string name="nav_stat">統計</string>
    <string name="nav_setting">設定</string>

    <string name="personalize">個人化設定</string>
    <string name="personalize_themeSwitch">外觀主題</string>
    <string name="personalize_changePassword">修改密碼</string>
    <string name="personalize_signOut">登出帳號</string>
    <string name="set">功能設定</string>
    <string name="set_exportData">匯出資料(CSV)</string>
    <string name="set_remind">記帳提醒</string>
    <string name="set_feedBack">意見回饋</string>
    <string name="other">其他</string>
    <string name="other_about">關於</string>


</resources>