<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main">

    <!-- 收入 / 支出 -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/addbill_mbtg_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:selectionRequired="true"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addbill_mb_expense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_bill_expense"
            app:icon="@drawable/expense"
            app:iconSize="24dp"
            android:layout_weight="1"
            android:textColor="@color/text_primary"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addbill_mb_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_bill_income"
            app:icon="@drawable/income"
            app:iconSize="24dp"
            android:layout_weight="1"
            android:textColor="@color/text_primary"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

    </com.google.android.material.button.MaterialButtonToggleGroup>



    <!-- 日期 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addbill_til_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/add_bill_date"
        app:layout_constraintTop_toBottomOf="@id/addbill_mbtg_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addbill_tiet_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_hint"
            android:focusable="false"
            android:clickable="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- 分類 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addbill_til_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/add_bill_type"
        app:layout_constraintTop_toBottomOf="@id/addbill_til_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/addbill_actv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_hint" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- 金額 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addbill_til_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/add_bill_amount"
        app:layout_constraintTop_toBottomOf="@id/addbill_til_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addbill_tiet_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_hint" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- 備註 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addbill_til_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/add_bill_note"
        app:layout_constraintTop_toBottomOf="@id/addbill_til_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addbill_tiet_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_hint" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- 新增按鈕 -->
    <Button
        android:id="@+id/addbill_bt_add"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_bill_add"
        android:textColor="@color/text_primary"
        app:layout_constraintTop_toBottomOf="@id/addbill_til_note"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- 返回按鈕 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addbill_bt_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/back"
        android:textColor="@color/text_primary"
        app:icon="@drawable/back"
        app:iconSize="24dp"
        app:layout_constraintTop_toBottomOf="@id/addbill_til_note"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
