<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main">

    <!-- 收入 / 支出 -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/addbill_mbtg_type"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        app:selectionRequired="true"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addbill_mb_expense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_bill_expense"
            app:icon="@drawable/expense"
            app:iconSize="24dp"
            android:layout_weight="1"
            android:textColor="@color/text_primary"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addbill_mb_income"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_bill_income"
            app:icon="@drawable/income"
            app:iconSize="24dp"
            android:layout_weight="1"
            android:textColor="@color/text_primary"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/addbill_bt_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addbill_mbtg_type" />

    <!-- 新增按鈕 -->

    <Button
        android:id="@+id/addbill_bt_add"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_bill_add"
        android:textColor="@color/text_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- 返回按鈕 -->
    <Button
        android:id="@+id/addbill_bt_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/back"
        android:textColor="@color/text_primary"
        app:icon="@drawable/back"
        app:iconSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>


